# RepairsComponents-v0

./: # Plan of work for two days:.md  .gitignore  .pre-commit-config.yaml  Dockerfile  MUJOCO_LOG.TXT  Makefile  README.md  README_GENESIS.md  Repairs-v0.code-workspace  __init__.py  combined_req.txt  combined_req_cpu.txt  debug.py  debug_scene_creation.py  debug_scene_render.py  debug_step_export.step  genesis-experiments.ipynb  genesis-render.py  loc.py  original_request.md  pyproject.toml  pytest_output.txt  repairs_sim_step.py  reproduce_weld_cuda_error.py  reproduce_weld_cuda_error_franka.py  reproduce_weld_cuda_error_gym_env.py  requirements-dev.txt  requirements.txt  setup.py  test_gym_env.py  test_motion_planning.py  test_motion_planning_gripper.py  test_random_policy.py  test_stack.py  testing_file.py  testing_notebook.ipynb  too_small_mesh_debug.py  vis_test.py  voltage_source_to_lightbulb.py
.github/ISSUE_TEMPLATE/: bug_report.md
.windsurf/rules/: assert-and-raise-statements.md  genesis-rendering-rule.md
dev/: design_choices.md  profile_env_step.py  ruff-autostage.sh  setup.sh  setup_cpu.sh  setup_genesis.sh  setup_mjx.sh  vast_ai_note.md
dev/reference_imlplementations/: fastener_markup.py  mesh_voxelize_and_display_voxels.py
docs/: Teaching robots to repair paper.tex  conf.py  contributing.md  electronics_sim.md  index.md  index.rst  requirements-docs.txt  roadmap.md
docs/api/: modules.rst
docs/api_reference/: base.md  controls.md  fasteners.md  index.md  sockets.md
docs/examples/: index.md
docs/user_guide/: components.md  index.rst  installation.md  installation.rst  quickstart.md  quickstart.rst
examples/: 15_wire_up.py  __init__.py  basic_usage.py  box_to_pos_task.py  button_demo.py  clamp_plates_49.py  genesis_button_demo.py  ten_holes_14.py  wire_up_15.py
geom_exports/: tool_stand_big.glb
geom_exports/electronics/connectors/: round_laptop_female.gltf  round_laptop_female.mjcf  round_laptop_male.gltf
geom_exports/tooling/: auto_screwdriver.gltf
geom_exports/tooling_stands/: tool_stand_big.gltf  tool_stand_plate.glb  tool_stand_plate.gltf
repairs_components/geometry/: b123d_utils.py  base.py  fasteners.py
repairs_components/geometry/base_env/: tooling_stand_big.py  tooling_stand_plate.py
repairs_components/geometry/connectors/: connectors.py
repairs_components/geometry/fluids/: pipe.py
repairs_components/logic/: fluid_state.py  physical_state.py
repairs_components/processing/: genesis_utils.py  geom_utils.py  part_types.py  scene_creation_funnel.py  tasks.py  textures.py  translation.py  voxel_export.py
repairs_components/save_and_load/: multienv_dataloader.py  offline_data_creation.py  offline_dataloading.py  online_save.py  save.py
repairs_components/training_utils/: background_images.py  concurrent_scene_dataclass.py  env.py  env_dataloader.py  env_setup.py  failure_modes.py  final_reward_calc.py  gym_env.py  keyboard_teleop.py  keyboard_teleop_env.py  motion_planning.py  multienv_dataloader.py  offline_data_creation.py  offline_dataloader.py  online_dataloader.py  progressive_reward_calc.py  reward_calc.py  robot_cfgs.py  sim_state.py  sim_state_global.py  train.py  translation.py
src/geometry/: b123d_utils.py  base.py  controls.py  fasteners.py  genesis_component.py  sockets.py
src/logic/: fluid_state.py  physical_state.py
src/processing/: voxel_export.py
src/repairs_components/: __init__.py  base.py  controls.py  fasteners.py  sockets.py
src/repairs_components.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/training_utils/: env.py  env_setup.py  reward_calc.py  sim_state.py  train.py  translation.py
tests/: __init__.py  b123d_do_children_intersect_repro.py  conftest.py  global_test_config.py  test_attach_tool_to_arm.py  test_b123d_utils.py  test_bdim_equals_in_tensorclass.py  test_connectors_connect.py  test_connectors_geom.py  test_connectors_math.py  test_controls.py  test_diff.py  test_electronics.py  test_electronics_diff.py  test_electronics_state.py  test_env_benchmark_cpu.py  test_env_integration_bdim2.py  test_fasteners_genesis.py  test_fasteners_math.py  test_geom_utils.py  test_geometry_batch.py  test_led.py  test_mna.py  test_multienv_dataloader.py  test_physical_state.py  test_sockets.py  test_step_repairs.py  test_step_repairs_electronics.py  test_tasks.py  test_tool_genesis.py  test_translate_compound_to_sim_state.py  test_translate_genesis_to_python.py  test_translation.py  visualizer_test.py
(+47 files in other folders)
