[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pylint.master]
load-plugins = "pylint.extensions.docparams"

[project]
name = "repairs_components"
version = "0.1.0"
description = "A library of repair components for reinforcement learning environments"
readme = "README.md"
authors = [
    {name = "Maksym Riabov", email = "maksymriabov2004@gmail.com"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "genesis-world>=0.2.1",
    "torch==2.5.1",
    "bd-warehouse @ git+https://github.com/gumyr/bd_warehouse",
    "build123d==0.9.1",
    "numpy==1.26.4",
    "ocp-vscode",
    "vtk",
    "libigl==2.5.1",
    "trimesh",
    "gymnasium",
    "ompl",
    "pyrender",
    "torch-geometric",
    "ruff",
    "jax[cuda]>=0.5.3",
    "jaxlib[cuda]>=0.5.3",
    "brax>=0.12.0",
    "flax>=0.10",
    "ipython",
    "flashbax",
    "torchvision",
    "kaolin==0.17.0",
]

[project.urls]
Homepage = "https://github.com/MaksymRiabov/RepairsComponents-v0"
Documentation = "https://repairs-components.readthedocs.io/"
Repository = "https://github.com/MaksymRiabov/RepairsComponents-v0"
Issues = "https://github.com/MaksymRiabov/RepairsComponents-v0/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    # "pytest-cov>=2.0",
    "isort>=5.10.1",
    "mypy>=0.910",
    "pylint>=2.12.0",
    "sphinx>=4.2.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.15.0",
]
